# eAI-Repair-Toolkit

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  CONTRIBUTING_FOR_METHOD_IMPLEMENTERS.md  README.md  pyproject.toml  ruff.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  maintenance.md  refactor.md  support_question.md
.github/workflows/: ci.yml  semantic-pr.yml
CONTRIBUTING/: DATASET.md  METHOD.md  MODEL.md  README.md  UTIL_FUNCS.md
docs/tutorial/: .gitignore  README.md
docs/tutorial/scripts/: extract_pedestrian.py  split_repair_dataset.py
docs/user_manual/: README.adoc  SampleProgramForRiskCalculationTool.ipynb
docs/user_manual/images/: .gitignore
src/repair/: testing.py
src/repair/cli/: __init__.py  loader.py
src/repair/core/: _base.py  dataset.py  eai_dataset.py  exceptions.py  loader.py  method.py  model.py  utils.py
src/repair/dataset/bdd/: __init__.py  prepare.py
src/repair/dataset/bdd_objects/: __init__.py  prepare.py  prepare_exp2.py
src/repair/dataset/cifar_10/: __init__.py  prepare.py
src/repair/dataset/fashion_mnist/: __init__.py  prepare.py
src/repair/dataset/gtsrb/: __init__.py  prepare.py
src/repair/methods/: kaminari_optimization.py
src/repair/methods/arachne/: __init__.py  arachne.py
src/repair/methods/athena/: __init__.py  athena.py
src/repair/methods/drweightmerge/: __init__.py  drwm.py
src/repair/methods/neurecover/: __init__.py  neurecover.py
src/repair/model/: base.py  hydra.py  hydra_head.py  keras_app.py  vgg16.py  vgg19.py  vit.py
src/repair/utils/: athena_test.py  create_gate_class.py  create_vit_class.py  draw_bubble_chart.py  draw_radar_chart.py  draw_radar_chart_with_subset.py  draw_repaired_result.py  extract_images.py  merge_repair_data.py  overlay_bubble_chart.py  overlay_radar_charts.py  plot_bubble_chart.py  plot_polar.py  risk_calculation_tool.py
tests/: test_debug.py
tests/repair/: conftest.py
tests/repair/cli/: test_loader.py
tests/repair/core/: conftest.py  test_dataset.py  test_loader.py  test_model.py  test_utils.py
tests/repair/core/fixtures/dataset/: demo.py
tests/repair/core/fixtures/methods/: demo.py
tests/repair/core/fixtures/model/: demo.py
tests/repair/core/fixtures/utils/: demo.py
tests/repair/dataset/: test_bdd.py  test_bdd_object.py  test_cifar10.py  test_dataset.py  test_fashion_mnist.py  test_gtsrb.py
tests/repair/methods/: test_arachne.py  test_athena.py  test_drwm.py  test_kaminari.py  test_neurecover.py
tests/repair/models/: test_base.py  test_hydra.py  test_hydra_head.py  test_kerasapp.py  test_vgg16.py  test_vgg19.py  test_vit.py
tests/repair/utils/: test_create_gate_class.py  test_create_vit_class.py  test_draw_bubble_chart.py  test_draw_repaired_result.py  test_extract_images.py  test_merge_repair_data.py  test_overlay_draw_bubble_chart.py  test_overlay_draw_radar_chart.py  tests_draw_radar_chart.py
tests/resources/bdd/: det_extracted.json
tests/resources/fashion-mnist/: repair.h5
tests/resources/fashion-mnist/model/: saved_model.pb
tests/resources/fashion-mnist/model/variables/: variables.index
tests/resources/fashion-mnist/negative/: labels.json  repair.h5
tests/resources/fashion-mnist/negative/0/: labels.json  labels_no_priority.json  labels_optimized.json  labels_with_weight.json  weights.csv
tests/resources/fashion-mnist/negative/2/: labels.json  repair.h5
tests/resources/fashion-mnist/negative/4/: labels.json  repair.h5
tests/resources/fashion-mnist/negative/6/: labels.json  repair.h5
tests/resources/fashion-mnist/negative/7/: labels.json
tests/resources/fashion-mnist/negative/9/: labels.json  repair.h5
tests/resources/fashion-mnist/positive/: labels.json  labels_criterion.json  repair.h5
tests/resources/fashion-mnist/positive/0/: repair.h5
tests/resources/fashion-mnist/positive/1/: repair.h5
tests/resources/fashion-mnist/positive/2/: repair.h5
tests/resources/fashion-mnist/positive/3/: repair.h5
tests/resources/fashion-mnist/positive/4/: repair.h5
tests/resources/fashion-mnist/positive/5/: repair.h5
tests/resources/fashion-mnist/positive/6/: repair.h5
tests/resources/neurecover/: repair.h5  weights.csv
tests/resources/neurecover/models/: keras_metadata.pb
tests/resources/neurecover/negative/: repair.h5
tests/resources/neurecover/positive/: repair.h5
tests/resources/outputs_bdd_objects/model/: keras_metadata.pb  saved_model.pb
tests/resources/outputs_bdd_objects/negative/: labels.json
tests/resources/outputs_bdd_objects/positive/: labels.json
tests/resources/risk_calculation_tool/h5_dataset/: test.h5
tests/risk_calculation_tool/: prepare_step1.py  prepare_step2.py  test_risk_calculation_tool.py  util.py
tests/testplugins/repair/methods/: demo.py  demo2.py
tests/testplugins/repair/utils/: demo.py
(+143 files in other folders)
