[build-system]
requires = ["setuptools>=61", "setuptools_scm[toml]>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "eai-repair-toolkit"
readme = "README.md"
version = "1.1.0"
requires-python = ">=3.8"
dependencies = [
    "numpy >= 1.23, < 2",
    # TODO: tensorflow 2.16 use Keras v3 by default and required to set compatibility flag for old keras
    "tensorflow >= 2.9, < 2.16",
    "opencv-python ~= 4.5",
    "scikit-learn >= 1.0, < 2.0.0",
    "scikit-image >= 0.19.0",
    "pandas >= 1.5.0",
    "matplotlib >= 3.5.1",
    "ijson >= 3.1.3",
    "fire >= 0.4.0",
    "tqdm ~= 4.46",
]

[project.optional-dependencies]
test = [
    "pytest >= 7",
    "pytest-mock >= 3.8.1, < 4",
    "pytest-cov >= 4",
    "pytest-xdist >= 3",
]

dev = [
    "ruff ~= 0.4",
]

[project.scripts]
repair = "repair.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "tests/testplugins"]
python_classes = ["*Test"]
python_files = ["test_*.py"]
markers = [
    "models_data: used to pass index to the models fixture",
    "debug: Run the test only for investigating test enviromnents",
]
addopts = "-m 'not debug'"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.coverage.report]
exclude_also = [
    # Don't complain about debug purpose code
    "def __repr__",
    "if self.debug",
    "raise AssertionError",
    # Don't complain abount non hittable code.
    "raise NotImplementedError",
    # Don't complain about non runnable code
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "@(abc\\.)?abstractmethod",
]
omit = [
    "tests/*",
    "/private/*",
    "src/repair/dataset/bdd_objects/prepare_exp2.py",
]
